Add product category and detail views, update layout
Added `SanPhamTheoLoai` and `ChiTietSanPham` action methods in `HomeController.cs` for displaying products by category and detailed product information, respectively. Modified `Index.cshtml` to use `PartialSanPham` for rendering product items. Updated `Default.cshtml` to link categories to `SanPhamTheoLoai`. Replaced "Categories Section" with "Featured Section" in `_LayoutOgani.cshtml`. Created new views `ChiTietSanPham.cshtml` and `SanPhamTheoLoai.cshtml`, and a partial view `PartialSanPham.cshtml`.

--- a/Views/Shared/Components/LoaiSpMenu/Default.cshtml
+++ b/Views/Shared/Components/LoaiSpMenu/Default.cshtml
@@ -9,8 +9,7 @@
             @foreach(var item in Model)
             {
                 var getUrl = "https://localhost:7241/api/productapi/"+ item.MaLoai;
-                @*<li><a style="cursor:pointer" onclick="showProductByCategory('@getUrl')">@item.Loai</a></li>*@
-                <li><a >@item.Loai</a></li>
+                <li><a asp-controller="Home" asp-action="SanPhamTheoLoai" asp-route-maloai="@item.MaLoai" >@item.Loai</a></li>
             })
          
         </ul>
