--- a/Views/Home/SanPhamTheoLoai.cshtml
+++ b/Views/Home/SanPhamTheoLoai.cshtml
@@ -1,13 +1,18 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
+﻿
+@{
+    ViewData["Title"] = "SanPhamTheoLoai";
     Layout = "~/Views/Shared/_LayoutOgani.cshtml";
 }
+
 @using X.PagedList.Mvc.Core;
 @model X.PagedList.IPagedList<TDanhMucSp>
+
 @foreach (var item in Model)
 {
     @await Html.PartialAsync("PartialSanPham", item)
 }
 <div class="product__pagination">
-    @Html.PagedListPager(Model, page => Url.Action("Index", new { page }))
+    @Html.PagedListPager(Model, page => Url.Action("SanPhamTheoLoai", new { page = page, maloai = ViewBag.maloai }))
 </div>
+
+
