--- a/Views/Shared/_LayoutOgani.cshtml
+++ b/Views/Shared/_LayoutOgani.cshtml
@@ -54,8 +54,8 @@
                 </ul>
             </div>
             <div class="header__top__right__auth">
-                @* <a href="#"><i class="fa fa-user"></i> Login</a> *@
-                <a asp-controller="Access" asp-action="Logout"><i class="fa fa-user"></i> Logout</a>
+              @*   <a href="#"><i class="fa fa-user"></i> Login</a>
+                <a><i class="fa fa-user"></i> Logout</a> *@
             </div>
         </div>
         <nav class="humberger__menu__nav mobile-menu">
@@ -122,7 +122,7 @@
                             </div>
                             <div class="header__top__right__auth">
                                 @* <a href="#"><i class="fa fa-user"></i> Login</a> *@
-                               @*  <a asp-controller="Access" asp-action="Logout"><i class="fa fa-user"></i> Logout</a> *@
+                                <a asp-controller="Access" asp-action="Logout"><i class="fa fa-user"></i> Logout</a>
                             </div>
                         </div>
                     </div>
